samples/_failures_safe/1761435552_7b05c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4969c7d4.c: In function ‘display_results’:
./samples/SAFE/__tmp_4969c7d4.c:136:5: error: expected identifier at end of input
  136 |     printf("ERROR entries: %d\n", stats->
      |     ^~~~~~
./samples/SAFE/__tmp_4969c7d4.c:136:5: error: expected declaration or statement at end of input
